--- a/app/src/main/res/layout/activity_juegos.xml
+++ b/app/src/main/res/layout/activity_juegos.xml
@@ -43,7 +43,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/abc_vector_test"
-                    android:gravity="left" />
+                    android:gravity="left"
+                    android:onClick="button27" />
             </LinearLayout>
         </LinearLayout>
 
