--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -13,7 +13,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/fondomenu"
+            android:background="@drawable/custom_gradient"
             android:gravity="center_horizontal|center_vertical"
             android:orientation="vertical">
 
@@ -65,7 +65,6 @@
                         android:gravity="center_horizontal|center_vertical">
 
                         <TextView
-                            android:id="@+id/textView65"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
@@ -148,7 +147,7 @@
                     <TableRow
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:gravity="center_horizontal|center_vertical" >
+                        android:gravity="center_horizontal|center_vertical">
 
                         <TextView
                             android:id="@+id/textView66"
