--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -14,22 +14,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/colorido"
             android:gravity="center|center_horizontal|center_vertical"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/fondobienvenida"
+                android:background="@drawable/colorido"
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="cursive"
                     android:text="Bienvenido!"
-                    android:textColor="#0E0000"
-                    android:textSize="24sp"
+                    android:textColor="#292525"
+                    android:textSize="36sp"
                     android:textStyle="normal|bold|italic" />
 
                 <TextView
